--- a/modulo_1/html/01_estructura.html
+++ b/modulo_1/html/01_estructura.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>MI PRIMERA PAGINA MARTINEZ</title>
+        <title>MI PRIMERA PAGINA LAZO</title>
     </head>
     <body>
         <p>
