--- a/modulo_1/html/05_enlaces.html
+++ b/modulo_1/html/05_enlaces.html
@@ -24,5 +24,9 @@
         
         <h3>ENLACES HACIA PAGINA EXTERNA</h3>
         <a href="https://www.ute.edu.ec">IR AL PORTAL DE LA UTE</a>
+
+        <h3>ENLACES ABRIR PESTAÑA SIGUIENTE</h3>
+        <a href="https://www.ute.edu.ec" target="_blank">IR AL PORTAL DE LA UTE EN LA SIGUIENTE PESTAÑA</a>
+
     </body>
 </html>
