--- a/modulo_1/html/07_tablas_mp.html
+++ b/modulo_1/html/07_tablas_mp.html
@@ -2,13 +2,13 @@
 <html lang="es">
     <head>
         <meta charset="UTF-8">
-        <title>CONTROL DE INVENTARIO</title>
+        <title>TABLAS HTML</title>
     </head>
     <body bgcolor="#2784F6" background="images/cc.jpg">
         
         <h3>
             <font color="white">
-                INVENTARIO
+                TABLAS HTML
             </font>
         </h3>
 
@@ -16,74 +16,74 @@
             <tr bgcolor="#27F576">
                 <th>
                     <font color="white">
-                        Producto
+                        Nombre
                     </font>
                 </th>
                 <th>
                     <font color="white">
-                        Fecha de emision
+                        Apellido
                     </font>
                 </th>
                 <th>
                     <font color="white">
-                        Precio
+                        Cedula
                     </font>
                 </th>
                 <th>
                     <font color="white">
-                        Peso
+                        Correo
                     </font>
                 </th>
             </tr>
             <tr bgcolor="#F527F5">
                 <td>
-                    Borrador
+                    Luis
                 </td>
                 <td>
-                    enero 15
+                    Lazo
                 </td>
                 <td>
-                    0.15
+                    1725664401
                 </td>
                 <td>
-                    20 gr
+                    luis.lazo@ute.edu.ec
                 </td>
             </tr>
             <tr bgcolor="#F527F5">
                 <td>
-                    Esfero
+                    Pablo
                 </td>
                 <td>
-                    febreo 16
+                    Picasso
                 </td>
                 <td>
-                    0.40
+                    123456789
                 </td>
                 <td>
-                    15 gr
+                    pa.picc@ute.edu.ec
                 </td>
             </tr>
             <tr bgcolor="#F527F5">
                 <td colspan="2">
-                    Calculadora
+                    Juan Perez
                 </td>
                 <td>
-                    febrero 2
+                    1307208403
                 </td>
                 <td rowspan="2">
-                    120 gr
+                    juan.perez@ute.edu.ec
                 </td>
             </tr>
             <tr bgcolor="#F527F5">
 
                 <td>
-                    Regla
+                    Perez
                 </td>
                 <td>
-                    marzo 16
+                    1307208403
                 </td>
                 <td>
-                    60 gr
+                    juan.perez@ute.edu.ec
                 </td>
             </tr>
         </table>
